@@ -15,7 +15,7 @@
 </p>
 <p>
     {% blocktrans %}
-    To approve this, please 
+    To approve this, please
     {% endblocktrans %}
     <a href="http://{{site.domain}}{% url 'registration_admin_approve' profile_id %}"> {% trans "click here" %}</a>.
 </p>
